feat(auth): add auth table, registration and login
