# src/index.ts
@@ -1,12 +1,12 @@
 import { createAppFromFactory, createOpenApiFromFactory } from "./app";
 import { config } from "./config";
 import { Login } from "./endpoints/auth/login";
+import { Register } from "./endpoints/auth/register";
 import { TodoCreate } from "./endpoints/todos/todoCreate";
 import { TodoDelete } from "./endpoints/todos/todoDelete";
 import { TodoDetail } from "./endpoints/todos/todoDetail";
 import { TodoList } from "./endpoints/todos/todoList";
 import { TodoUpdate } from "./endpoints/todos/todoUpdate";
-import { UserCreate } from "./endpoints/users/userCreate";
 import { UserDelete } from "./endpoints/users/userDelete";
 import { UserDetail } from "./endpoints/users/userDetail";
 import { UserList } from "./endpoints/users/userList";
@@ -36,13 +36,13 @@ openapi.registry.registerComponent("securitySchemes", "bearerAuth", {
 });
 
 openapi.post("/api/login", Login);
+openapi.post("/api/register", Register);
 
 openapi.get("/api/users", UserList);
-openapi.post("/api/users", UserCreate);
 openapi.get("/api/users/todos", UserTodoList);
 openapi.get("/api/users/:id", UserDetail);
+openapi.post("/api/users/delete", UserDelete);
 openapi.post("/api/users/:id", UserUpdate);
-openapi.post("/api/users/:id/delete", UserDelete);
 
 openapi.get("/api/todos", TodoList);
 openapi.post("/api/todos", TodoCreate);
